# NepTrain

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docs/source/: conf.py  index.rst
docs/source/command/: gpumd.md  index.rst  init.md  nep.md  perturb.md  select.md  train.md  vasp.md
docs/source/example/: CsPbI3.md
docs/source/install/: index.md
examples/CsPbI3/: INCAR  job.yaml  nep.in  nep.txt  train.xyz
src/NepTrain/: __init__.py  config.ini  utils.py
src/NepTrain/cli/: NepTrain.py  cli.py
src/NepTrain/core/: __init__.py  _hiphive.py  nep.py  perturb.py  template.py  train.py  utils.py  vasp.py  worker.py
src/NepTrain/core/gpumd/: gpumd.py  io.py  plot.py  run.py  select.py
src/NepTrain/core/nep/: calculator.py  io.py  nep.py
src/NepTrain/core/perturb/: run.py
src/NepTrain/core/select/: filter.py  run.py  select.py
src/NepTrain/core/train/: job.yaml  run.py  worker.py
src/NepTrain/core/vasp/: __init__.py  io.py  run.py  vasp.py
src/NepTrain/io/: utils.py
src/NepTrain/io/gpumd/: inputs.py
src/NepTrain/io/nep/: inputs.py
src/NepTrain/io/vasp/: __init__.py  inputs.py
src/NepTrain/plot/: __init__.py  nep.py
